--- a/global.css
+++ b/global.css
@@ -2,7 +2,8 @@
       max-width: 1100px;     
       margin: auto;
     }
-
+  
+      
     h1 {
       text-align: center;
       color: #333;
@@ -14,4 +15,12 @@
 
     .explica {
       color: red;
+    }
+    
+    .box{
+      display: inline-block;
+      width: 200px;
+      margin: 1em;
+      background-color: red;
+      text-align: center;
     }
