--- a/global.css
+++ b/global.css
@@ -1,26 +1,24 @@
-    .contenidor {
-      max-width: 1100px;     
-      margin: auto;
-    }
-  
-      
-    h1 {
-      text-align: center;
-      color: #333;
-    }
-
-    p {
-      margin-bottom: 16px;
-    }
-
-    .explica {
-      color: red;
-    }
+body { 
+    font-family: "Open Sans";
+    margin: 0;
+    padding: 0;
+}
+.autocenterContainer {
+    max-width: 800px;     /* amplada màxima */
+    margin: auto;         /* centra horitzontalment */
+    background: red;
+    padding: 20px;
+}
+.titleContainer { 
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1em;
+    margin-top: 1em;
+}
+.titleContainer > h1 { 
+    box-sizing: border-box;
+    margin: 0;
+}
     
-    .box{
-      display: inline-block;
-      width: 200px;
-      margin: 1em;
-      background-color: red;
-      text-align: center;
-    }
+    
