--- a/global.css
+++ b/global.css
@@ -1,7 +1,18 @@
-body { 
-    font-family: "Open Sans";
+
+html, body {
+    height: 100%; /* Hace que el body ocupe toda la altura de la ventana */
     margin: 0;
-    padding: 0;
+}
+
+body {
+    font-family:Arial, Helvetica, sans-serif;
+    padding-top: 70px;
+    flex-direction: column;
+    display: flex;
+}
+.principal {
+    flex: 1 0 auto; /* Crece pero no se comprime */
+    padding-bottom: 60px; /* Espacio para el footer, ajusta según su altura */
 }
 .autocenterContainer {
     max-width: 1100px;     /* amplada màxima */
@@ -9,15 +20,16 @@ body {
     background: black;
     padding: 20px;
     color: #ffffff;
-    border-radius: 5px; 
+    border-radius: 10px; 
 }
 .hero { 
     align-items: center;
     display: flex;
     flex-direction: column;
-    margin-bottom: 1em;
-    margin-top: 1em;
-    border-radius: 5px; 
+    margin-top: 70px;
+    margin-bottom: 70px;
+    border-radius: 5px;
+    text-align: center;
 }
 .boton{
     display: inline-block; 
@@ -43,9 +55,27 @@ body {
     background-color: black;
     color: white;
 
-
 }
 a{
-        color: #ffffff;
+    color: #ffffff;
 }
 
+.coleccion{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+.card {
+    background-color: black;
+    color: white;
+    padding: 20px;
+    width: 30%; 
+    border-radius: 8px; 
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1); 
+}
+.etiqueta{
+    background-color: white;
+    color: black;
+    padding: 10px;
+    border-radius: 5px; 
+}
