--- a/global.css
+++ b/global.css
@@ -106,15 +106,46 @@ a{
 img {
     height: 300px;
 }
-.map-placeholder {
-    width: 100%;
-    height: 200px;
-    background-color: black; /* Caja gris como mapa ficticio */
-    margin-top: 15px;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 300px;
-    color: #fff;
+
+.contenedor-contacto{
+  max-width: 1100px;
+  margin: auto;
+  background-color: black;
+  padding-top: 10px;
+  align-items: center; 
+  display: flex;
 }
+
+.contacto{
+  display: flex;              
+  flex-wrap: wrap;            
+  justify-content: center;
+  gap: 10px;                  
+  padding: 50px;
+  max-width: 1200px;
+  margin: aut;
+  flex-direction: column;
+  color: white;
+}
+
+.texto{
+  height: 80px;
+  display: flex;
+  background-color: white;
+  padding: 4px 8px;
+  border-radius: 5px;
+  font-size: 13px;
+  color:black;
+  text-align:center;
+  width: 260px;
+}
+.contactot{
+  display: flex;
+  background-color: white;
+  padding: 4px 8px;
+  border-radius: 5px;
+  font-size: 13px;
+  color: black;
+  text-align:center;
+  width: 260px;
+}    
