--- a/global.css
+++ b/global.css
@@ -1,22 +1,22 @@
 
 html, body {
-    height: 100%; /* Hace que el body ocupe toda la altura de la ventana */
+    height: 100%; /*Altura*/
     margin: 0;
 }
 
 body {
-    font-family:Arial, Helvetica, sans-serif;
-    padding-top: 70px;
-    flex-direction: column;
-    display: flex;
+    font-family:Arial, Helvetica, sans-serif; /*Fuente de leta¡ra*/
+    padding-top: 70px; /*Para dar espacio entre los divs*/
+    flex-direction: column;/*Si lo quieres en columnas o filas depende lo qe pongas*/
+    display: flex; /*Usa la flex box*/
 }
 .principal {
-    flex: 1 0 auto; /* Crece pero no se comprime */
-    padding-bottom: 60px; /* Espacio para el footer, ajusta según su altura */
+    flex: 1 0 auto; /*mismo tamañano*/
+    padding-bottom: 60px; 
 }
 .autocenterContainer {
-    max-width: 1100px;     /* amplada màxima */
-    margin: auto;         /* centra horitzontalment */
+    max-width: 1100px;    
+    margin: auto;         
     background: black;
     padding: 20px;
     color: #ffffff;
@@ -92,7 +92,7 @@ a{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 50px;
+    gap: 50px; /*especio entre divs*/ 
 }
 
 .productoscard{
@@ -118,7 +118,7 @@ img {
 
 .contacto{
   display: flex;              
-  flex-wrap: wrap;            
+  flex-wrap: wrap;   /*Sirve para que los objetos salten a una siguiente linea*/         
   justify-content: center;
   gap: 10px;                  
   padding: 50px;
